fixed image routes
added routing to get images from folder

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="header">
                 <span> soundcloud </span>
                 <span> youtube </span>
-                <img id = "bird"src="birdlogo.svg"></img>
+                <img id = "bird"src="img/birdlogo.svg"></img>
                 <span> instagram </span>
                 
                 <span> facebook </span>
@@ -30,20 +30,20 @@
         <div class="wrapper">
             
             <section id="one" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart"id="meenindeath" src="meenindeath.svg"></img>
+                <img class = "albumart"id="meenindeath" src="img/meenindeath.svg"></img>
                 <span id="one-text">meenin death</span>
             </section>
             <section id="two" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart" id="twoofus" src="2ofus.jpg"></img>
+                <img class = "albumart" id="twoofus" src="img/2ofus.jpg"></img>
                 <span id="two-text">TK</span>
             </section>
 
             <section id="three" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart" id="brendan" src="brendan.svg"></img>
+                <img class = "albumart" id="brendan" src="img/brendan.svg"></img>
                 <span id="three-text">Brendan Bennett</span>
             </section>
             <section id="four" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart" id="jonkuwada" src="jonkuwada.svg"></img>
+                <img class = "albumart" id="jonkuwada" src="img/jonkuwada.svg"></img>
                 <span id="four-text">Jon Kuwada</span>
             </section>
 
