two of us image rename
renamed two of us in attempts to display it on the webpage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span id="one-text">meenin death</span>
             </section>
             <section id="two" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart" id="twoofus" src="img/2ofus.jpg"></img>
+                <img class = "albumart" id="twoofus" src="img/two.jpg"></img>
                 <span id="two-text">TK</span>
             </section>
 
