Embedded Soundcloud Player
added embedded soundcloud player and new background art for Jon's sectiom

--- a/index.html
+++ b/index.html
@@ -32,19 +32,24 @@
             <section id="one" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart"id="meenindeath" src="img/meenindeath.svg"></img>
                 <span id="one-text">meenin death</span>
+                <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335846888&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
             <section id="two" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart" id="twoofus" src="img/two.jpg"></img>
+                <img class = "albumart" id="twoofus" src="img/2ofus.jpg"></img>
                 <span id="two-text">TK</span>
+                <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296955566&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
 
             <section id="three" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart" id="brendan" src="img/brendan.svg"></img>
                 <span id="three-text">Brendan Bennett</span>
+                <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/310420360&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
             <section id="four" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart" id="jonkuwada" src="img/jonkuwada.svg"></img>
                 <span id="four-text">Jon Kuwada</span>
+                <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335122444&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
+
             </section>
 
         </div>
