fixed two of us link... again
see title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335846888&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
             <section id="two" class="artworks" data-speed="0" data-type="background">
-                <img class = "albumart" id="twoofus" src="img/2ofus.jpg"></img>
+                <img class = "albumart" id="twoofus" src="img/two.jpg"></img>
                 <span id="two-text">TK</span>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296955566&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
