Resized panels & added tilt using tweenlite js
resized the individual panels to make them more mobile compatible, and faster running in a browser(gif renders). Also added code from GSAP (greensocket animation platform) to make a simple tilt effect on mouse move event

--- a/index.html
+++ b/index.html
@@ -16,38 +16,41 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+        <script src="script.js"></script>
+
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <div id="header">
-                <span> soundcloud </span>
-                <span> youtube </span>
+                <a target="_blank" href="https://soundcloud.com"> soundcloud </a>
+                <a> youtube </a>
                 <img id = "bird"src="img/birdlogo.svg"></img>
-                <span> instagram </span>
+                <a> instagram </a>
                 
-                <span> facebook </span>
+                <a> facebook </a>
             </div>
         <div class="wrapper">
             
             <section id="one" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart"id="meenindeath" src="img/meenindeath.svg"></img>
-                <span id="one-text">meenin death</span>
+                <a id="one-text">meenin death</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335846888&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
             <section id="two" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart" id="twoofus" src="img/two.jpg"></img>
-                <span id="two-text">TK</span>
+                <a id="two-text">TK</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296955566&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
 
             <section id="three" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart" id="brendan" src="img/brendan.svg"></img>
-                <span id="three-text">Brendan Bennett</span>
+                <a id="three-text">Brendan Bennett</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/310420360&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
             <section id="four" class="artworks" data-speed="0" data-type="background">
                 <img class = "albumart" id="jonkuwada" src="img/jonkuwada.svg"></img>
-                <span id="four-text">Jon Kuwada</span>
+                <a id="four-text">Jon Kuwada</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335122444&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
 
             </section>
