--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
        
+       <!-- HTML 5 Boiler Plate Links -->
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-
+        <!-- JQuery & HTML 5 Boiler Plate Links -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <!-- Tween Max Animation Links -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
         <script src="script.js"></script>
-
+        <!-- WOW JS Links -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+        <script>
+              new WOW().init();
+        </script>
+        <head>
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+        </head>
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
@@ -32,23 +42,23 @@
             </div>
         <div class="wrapper">
             
-            <section id="one" class="artworks" data-speed="0" data-type="background">
+            <section id="one" class="artworks wow fadeInLeft" data-speed="0" data-type="background">
                 <img class = "albumart"id="meenindeath" src="img/meenindeath.svg"></img>
                 <a id="one-text">meenin death</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335846888&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
-            <section id="two" class="artworks" data-speed="0" data-type="background">
+            <section id="two" class="artworks wow fadeInRight" data-speed="0" data-type="background" data-wow-offset="400">
                 <img class = "albumart" id="twoofus" src="img/two.jpg"></img>
                 <a id="two-text">TK</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/296955566&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
 
-            <section id="three" class="artworks" data-speed="0" data-type="background">
+            <section id="three" class="artworks wow fadeInLeft" data-speed="0" data-type="background" data-wow-offset="400">
                 <img class = "albumart" id="brendan" src="img/brendan.svg"></img>
                 <a id="three-text">Brendan Bennett</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/310420360&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
             </section>
-            <section id="four" class="artworks" data-speed="0" data-type="background">
+            <section id="four" class="artworks wow fadeInRight" data-speed="0" data-type="background " data-wow-offset="400">
                 <img class = "albumart" id="jonkuwada" src="img/jonkuwada.svg"></img>
                 <a id="four-text">Jon Kuwada</a>
                 <iframe width="70%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335122444&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=true"></iframe>
