minor changes to social btns

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                 <i class="fa fa-soundcloud fa-inverse fa-4x" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-2">
-                <a class="social-icons" onclick="window.open('https://www.instagram.com/bird.collective/')" >
+                <a class="social-icons" onclick="window.open('https://www.instagram.com/bird.collective/')" href="#noscroll" >
                 <i class="fa fa-instagram fa-inverse fa-4x" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-2">
-                <a class="social-icons" onclick="window.open('https://www.youtube.com/channel/UCAeBSuV8qG8qKnAM690StIQ')" >
+                <a class="social-icons" onclick="window.open('https://www.youtube.com/channel/UCAeBSuV8qG8qKnAM690StIQ')" href="#noscroll">
                 <i class="fa fa-youtube-play fa-inverse fa-4x" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-2">
-                <a class="social-icons" onclick="window.open('https://www.facebook.com/birdmultimedia/')" >
+                <a class="social-icons" onclick="window.open('https://www.facebook.com/birdmultimedia/')" href="#noscroll">
                 <i class="fa fa-facebook fa-inverse fa-4x" aria-hidden="true"></i></a>
             </div>
             
